# AURA-VAE

./: .gitignore  README.md  audio_registry.json  copy_to_android.bat  pyproject.toml  requirements.txt  run.bat  run_pipeline.py  telegram_debug.json
android/AuraVAE/: .gitignore  gradlew.bat  settings.gradle
android/ui-design/: README.md  index.html
data/anomalies/: anomaly_registry.json
data/processed/: preprocessing_metadata.json
experiments/20260127-123319_train/: preprocessing_metadata.json
experiments/20260127-130021_train/: preprocessing_metadata.json
experiments/20260202-122520_train/: preprocessing_metadata.json
experiments/final_verification/: Filante Sound Acquisition 4_cleaned_results.json
experiments/inference_check/: Filante Sound Acquisition 3_results.json
experiments/post_retrain_cleaned/: Filante Sound Acquisition 4_cleaned_results.json
experiments/post_retrain_verification/: Filante Sound Acquisition 4_results.json
experiments/verification_run/: Filante Sound Acquisition 3_results.json  (+1 more)
models/: android_config.json  model_evolution.json  normalization_params.json  threshold_config.json  training_history.json
python/: __init__.py  anomaly_dataset.py  check_weights_status.py  config.py  convert_tflite.py  dataset.py  debug_htk.py  evaluate.py  fetch_audio.py  get_telegram_id.py  incremental_train.py  inference.py  model.py  model_tracker.py  preprocessing.py  train.py  utils.py
tests/: __init__.py  conftest.py  test_config.py  test_integration.py  test_model.py  test_preprocessing.py  test_tflite.py
(+75 files in other folders)
