[project]
name = "aura-vae"
version = "1.0.0"
description = "Acoustic Unsupervised Recognition of Anomalies using VAE"
readme = "README.md"
requires-python = ">=3.9"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.setuptools]
packages = ["python"]
